# corvus

./: .gitignore  .semgrepignore  AGENT_INTEGRATION_GUIDE.md  AGENT_SETUP_CLAUDE_CODE.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CUSTOMER_ZERO_README.md  DEPLOYMENT_PLAN.md  FINAL_COMPLETION.md  FINAL_STATUS.md  FINAL_SUMMARY.md  LICENSE  PHASE2_PREP.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE4_STATUS.md  PHASE5_COMPLETE.md  PROGRESS_UPDATE.md  README.md  SECURITY.md  STATUS_UPDATE.md  deploy-parallel.sh  docker-compose.yml  homelab-deployment.md  prometheus-alerts.yml
corvus-cli/: pyproject.toml
corvus-sdk/: pyproject.toml
corvus-sdk/tests/: test_client.py
corvus-server/: Dockerfile  pyproject.toml  requirements.txt
corvus-server/cli/: README.md  corvus_cli.py
corvus-server/config/: infrastructure.yaml.example
corvus-server/migrations/: 001_add_mesh_columns.sql  002_add_declared_state_columns.sql  003_backfill_drift_columns.sql  004_siem_dead_letter_and_indexes.sql
corvus-server/runbooks/: caipe_agent.yaml  caipe_supervisor.yaml  triage-automation.yaml  triage-database.yaml  triage-deploy.yaml  triage-dns.yaml  triage-home-automation.yaml  triage-inference.yaml  triage-iot-gateway.yaml  triage-mcp-bridge.yaml  triage-media.yaml  triage-monitoring.yaml  triage-proxy.yaml  triage-secrets.yaml  triage-utility.yaml
corvus-server/src/: app.py  config.py  database.py  event_bus.py  event_signing.py  graph.py  hlc.py  mcp_endpoint.py  mcp_server.py  metrics.py  ocsf.py  sanitizer.py
corvus-server/tests/: conftest.py  test_agent_instructions.py  test_auth.py  test_auth_middleware.py  test_auth_oidc_fallback.py  test_auto_tuner.py  test_backup.py  test_change_expiry.py  test_changes.py  test_ci.py  test_cli.py  test_cmdb.py  test_cmdb_sql_injection.py  test_collector.py  test_compliance_audit.py  test_correlations.py  test_dashboard.py  test_db_migration.py  test_deploy_manager.py  test_discovery_layers.py  test_drift.py  test_e2e.py  test_event_bus_enhancements.py  test_event_cleanup.py  test_events.py  test_events_validation.py  test_executor_timeout.py  test_flywheel_harness.py  test_gap_detection.py  test_gap_edge_cases.py  test_gap_sweep.py  test_governance_auth.py  (+45 more)
(+197 files in other folders)
