[project]
name = "corvus-cli"
version = "0.1.0"
requires-python = ">=3.11"
description = "CLI for the Corvus operational governance API"
dependencies = ["httpx>=0.27", "typer>=0.15", "rich>=13"]

[project.scripts]
corvus = "corvus_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corvus_cli"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
