[project]
name = "corvus-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "PyJWT>=2.12.0",
    "cryptography>=46.0.6",
    "aiohttp>=3.13.4",
    "neo4j>=5.22.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "S101",   # assert used in tests
    "S608",   # SQL injection — we use parameterized queries, bandit handles this
    "B008",   # Depends() in FastAPI defaults is intentional pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811", "S106"]  # F811: pytest fixtures, S106: test credential strings

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B608"]  # B101: assert in tests, B608: parameterized queries (false positives)

[tool.pytest.ini_options]
asyncio_mode = "auto"
